# serializer version: 1
# name: test_basic_controller_properties[climate.izone_controller_test_controller_123-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 15.0,
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.izone_controller_test_controller_123',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'izone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 392>,
    'translation_key': None,
    'unique_id': 'test_controller_123',
    'unit_of_measurement': None,
  })
# ---
# name: test_basic_controller_properties[climate.izone_controller_test_controller_123-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'control_zone': 1,
      'control_zone_name': None,
      'control_zone_setpoint': None,
      'current_temperature': 22.0,
      'fan_mode': 'medium',
      'fan_modes': list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      'friendly_name': 'iZone Controller test_controller_123',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 15.0,
      'supply_temperature': 16.0,
      'supported_features': <ClimateEntityFeature: 392>,
      'target_temp_step': 0.5,
      'temp_setpoint': 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.izone_controller_test_controller_123',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_basic_controller_properties[climate.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 15.0,
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'izone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'test_controller_123_z1',
    'unit_of_measurement': None,
  })
# ---
# name: test_basic_controller_properties[climate.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'airflow_max': 100,
      'airflow_min': 0,
      'current_temperature': 22.5,
      'friendly_name': 'Living Room',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 15.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 0.5,
      'temperature': 24.0,
      'zone_index': 0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
